# ovcfg

./: .gitignore  README.md  ovcfg.py  setup.cfg
ovcfg/: __init__.py  __main__.py  cpath.py  ovcfg.py
tests/: test.py
