[metadata]
name = ovcfg
version = 1.3.2
author = Dmitry Yakovlev
author_email = opensuse12@gmail.com
description = OvCfg
long_description = file: README.md, LICENSE.txt
long_description_content_type= text/markdown
licence = MIT
url = 

[options]
python_requires = >=3.5
packages=ovcfg
install_requires =
